tests/fail/gram_no_rules.frac
gram koch = {
    alphabet: [F, p],
    init: 'F p p F p p F',
    rules: {
    }
}

main() {
    draw(koch, 6);
}
